Work on DataGrid example control.

--- a/SampleApplications/DataGrid/app/index.html
+++ b/SampleApplications/DataGrid/app/index.html
@@ -39,168 +39,13 @@
 			box-sizing: border-box;
 		}
 	</style>
-	<!--<style>
-		body {
-			/*background-color: black;*/
-		}
-
-		div.wrapper {
-			position: relative;
-			left: 100px;
-			width: calc(100% - 100px);
-			background-color: #eeeeee;
-			height: 500px;
-
-			-webkit-box-sizing: border-box;
-			-moz-box-sizing: border-box;
-			box-sizing: border-box;
-		}
-
-		/* Data Grid */
-
-		div.data_grid {
-
-			-webkit-box-sizing: border-box;
-			-moz-box-sizing: border-box;
-			box-sizing: border-box;
-
-			position: relative;
-			width: 100%;
-			height: 100%;
-			line-height: 100%;
-			margin: 0;
-			padding: 0;
-			overflow: hidden;
-		}
-		
-		[data-control="Controls.DataGrid"] {
-			position: relative;
-			width: 100%;
-			height: 100%;
-		}
-
-		div.data_grid div.dg_header_container {
-			
-			position: absolute;
-			width: 100%;
-			/*overflow: hidden;*/
-			top: 0;
-			left: 0;
-			padding: 0;
-			margin: 0;
-			z-index: 201;
-		}
-
-		div.data_grid div.dg_body_container {
-
-			position: relative;
-			width: 100%;
-			height: 100%;
-			padding: 0;
-			margin: 0;
-			overflow-y: auto;
-			overflow-x: auto;
-		}
-
-		div.data_grid div.dg_body_container .dg_body {
-
-			margin: 0;
-			padding: 0;
-			position: relative;
-			width: 100%;
-		}
-
-		div.data_grid div.dg_header_container .dg_rows,
-		div.data_grid div.dg_body_container .dg_rows {
-
-			margin: 0;
-			padding: 0;
-			position: relative;
-			display: inline-block;
-		}
-
-		div.data_grid div.dg_header_container .dg_row,
-		div.data_grid div.dg_body_container .dg_row { 
-
-			margin: 0;
-			padding: 0;
-			position: relative;
-			display: inline-block;
-			white-space: nowrap;
-			float: left;
-			clear: both;
-		}
-
-		div.data_grid div.dg_header_container .dg_cell,
-		div.data_grid div.dg_body_container .dg_cell {
-
-			margin: 0;
-			padding: 0;
-			/*position: relative;*/
-			display: inline-block;
-			
-			white-space: nowrap;
-			/*overflow: hidden;*/
-			text-overflow: ellipsis;
-		}
-
-		div.data_grid div.dg_body_container .dg_frozen {
-
-			margin: 0;
-			padding: 0;
-			position: absolute;
-			left: 0;
-			display: block;
-		}
-
-		div.data_grid div.dg_body_container .dg_frozen.dg_rows {
-
-			z-index: 200;
-		}
-
-		/* The below styles are for "looks" only, le */
-
-		div.data_grid .dg_row:nth-child(even) { 
-			background-color: #f5f5f5;
-		}
-
-		div.data_grid .dg_row:nth-child(odd) { 
-			background-color: #ffffff;
-		}
-
-		div.data_grid .dg_header .dg_row {
-			border-bottom: 2px solid #303030;
-		}
-
-		div.data_grid div.dg_header_container .dg_cell,
-		div.data_grid div.dg_body_container .dg_cell {
-
-			padding: 10px 10px 10px 10px;
-
-			/* to be set..  */
-			/*width: 100px;*/
-
-			/* these might be good to set for cell */
-			font-size: 12px;
-			line-height: 12px;
-		}
-
-		div.data_grid div.dg_header_container .dg_cell {
-			font-size: 14px;
-			line-height: 14px;
-		}
-
-		div.data_grid div.dg_body_container .dg_frozen .dg_row {
-			border-right: 1px solid #303030;
-		}
-
-	</style>-->
+	
 </head>
 
 <body>
 
 <div class="wrapper">
-	<div id="my_dg" data-control="Controls.DataGrid" data-grid-column-width="distributed"></div>
+	<div id="my_dg" data-control="Controls.DataGrid"></div>
 </div>
 
 <!-- <div class="wrapper">
