Reworked o-binding to support statig source vlaues (string, number)
	The o-binding can now be used with static values e.g:
		{
			targetProp1: 'Static string',
			targetProp2: 10
		}

	The o-binding now has better error reporting and warnings to make it easier to debugg faulty bindings. It should now pass allong information aout which binding and target/source property is causing the problem.

--- a/Tests/runner.html
+++ b/Tests/runner.html
@@ -24,6 +24,7 @@
             mocha.reporter('html');
         </script>
         <script src="./bindings/TestView.js"></script>
+        <script src="./bindings/TestControl.js"></script>
         <script src="./bindings/spec.js"></script>
         <script>
             var container = new Orange.Modularity.Container();
