Add unit tests for Router

--- a/Tests/runner.html
+++ b/Tests/runner.html
@@ -27,6 +27,8 @@
         </script>
         <script src="./helpers/TestFunctions.js"></script>
         
+        <script src="./router/spec.js"></script>
+        
         <script src="./bindings/TestView.js"></script>
         <script src="./bindings/TestControl.js"></script>
         <script src="./bindings/spec.js"></script>
