Various container improvements
- Support property injection using the Orange.Modularity.dependency decorator
- Added generic overloads to resolve, tryResolve, registerInstance and registerType
- Port Container tests to async
- Remove bower and tsd from Tests

--- a/Tests/runner.html
+++ b/Tests/runner.html
@@ -15,9 +15,9 @@
         </script>
 
         <div id="mocha"></div>
-        <script src="bower_components/jquery/dist/jquery.js"></script>
-        <script src="bower_components/knockout/dist/knockout.js"></script>
-        <script src="bower_components/reflect-metadata/Reflect.js"></script>
+        <script src="node_modules/jquery/dist/jquery.js"></script>
+        <script src="node_modules/knockout/build/output/knockout-latest.debug.js"></script>
+        <script src="node_modules/reflect-metadata/Reflect.js"></script>
         
         <script src="../orange.js"></script>
         <script src="./node_modules/mocha/mocha.js"></script>
